# CFDesktop

./: .clang-tidy  .clangd  .gitignore  .gitmodules  404.html  AGENT.md  AGENTS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  FAILED_DOXYGEN.md  PROMPT_FRONTMATTER_AND_CODEBLOCKS.md  README.md  doxybook.json  index.html  main.cpp  mkdocs.yml  package-lock.json  package.json  project.config.ts  queue.md  sitemap.xml
apps/: CMakeLists.txt  README.md
apps/alarm_clock/: CMakeLists.txt  alarm_clock_panel.cpp  alarm_clock_panel.h  app.json  main.cpp
apps/calculator/: CMakeLists.txt  app.json  calculator_panel.cpp  calculator_panel.h  main.cpp
apps/calculator/core/: BinaryOpTreeNode.cpp  BinaryOpTreeNode.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  FunctorTreeNode.cpp  FunctorTreeNode.h  NumberNode.cpp  NumberNode.h  ParseExceptions.h  Parser.cpp  Parser.h  TreeNodeBase.h  UnaryOpTreeNode.cpp  UnaryOpTreeNode.h
apps/calendar/: CMakeLists.txt  app.json  calendar_panel.cpp  calendar_panel.h  main.cpp
apps/noter/: CMakeLists.txt  app.json  main.cpp  noter_panel.cpp  noter_panel.h
apps/system_state/: CMakeLists.txt  app.json  main.cpp  system_state_panel.cpp  system_state_panel.h
base/: CMakeLists.txt  README.md
base/cfbase/system/: CMakeLists.txt
base/config_manager/include/: cfconfig.hpp
base/crash_handler/: CMakeLists.txt
base/crash_handler/src/: crash_handler.cpp  crash_report.cpp  crash_signal_handler.cpp  symbolizer.cpp
base/device/console/: console_helper.cpp
base/file_operations/: filter_target.h
base/include/base/: export.h  macros.h
base/ipc/: CMakeLists.txt
base/ipc/src/: ipc_client.cpp  ipc_message.cpp  ipc_message_registry.cpp  ipc_server.cpp
base/logger/include/: cflog.h
base/system/: os_helper.h
base/system/cpu/: CMakeLists.txt  cfcpu.cpp  cfcpu_bonus.cpp  cfcpu_profile.cpp
base/system/gpu/: CMakeLists.txt
base/system/hardware_tier/: CMakeLists.txt  hardware_tier.cpp  hardware_tier_assessor.h  hardware_tier_collector.h  hardware_tier_policy.h  hardware_tier_scorer.h
base/system/memory/: CMakeLists.txt  memory_info.cpp
base/utils/linux/: proc_parser.cpp
desktop/base/fundamental/: CMakeLists.txt
desktop/base/logger/: CMakeLists.txt  README.md  index.html
desktop/base/path/: CMakeLists.txt
desktop/main/path/: CMakeLists.txt
desktop/ui/platform/: CMakeLists.txt  DesktopPropertyStrategyFactory.h  IDesktopDisplaySizeStrategy.h
desktop/ui/render/: CMakeLists.txt  backend_capabilities.h
example/gui/material_typography/: CMakeLists.txt
test/: CMakeLists.txt
test/base/: CMakeLists.txt
test/base/expected/: expected_test.cpp
test/base/hash/: constexpr_fnv1a_test.cpp
test/base/indexed_vector/: indexed_vector_test.cpp
test/base/lockfree/: mpsc_queue_test.cpp
test/base/scope_guard/: scope_guard_test.cpp
test/base/weak_ptr/: weak_ptr_test.cpp
test/boot_test/: boot_detect.cpp  boot_detect.h  boot_test_core.cpp  boot_test_gui.cpp
test/cmake/: add_gtest_executable.cmake
test/config_manager/: CMakeLists.txt  mock_path_provider.h
test/crash/: CMakeLists.txt  crash_finalize_test.cpp  crash_report_test.cpp  crash_retention_test.cpp  crash_signal_test.cpp  crash_symbolizer_test.cpp  crash_test_util.h
test/desktop/: CMakeLists.txt
test/desktop/builtin_apps/: CMakeLists.txt  builtin_panel_registry_test.cpp
test/desktop/calculator/: CMakeLists.txt  parser_test.cpp
test/desktop/desktop_icon_layer/: CMakeLists.txt  desktop_icon_layer_test.cpp  desktop_shortcut_store_test.cpp
test/desktop/frosted_backdrop/: CMakeLists.txt  frosted_backdrop_test.cpp
test/desktop/init/: CMakeLists.txt  init_session_chain_test.cpp
test/desktop/launcher/: CMakeLists.txt  app_discoverer_test.cpp  app_icon_resolver_test.cpp  app_launcher_test.cpp  desktop_entry_index_test.cpp
test/desktop/wallpaper_animation/: CMakeLists.txt  wallpaper_animation_test.cpp
test/desktop/window_manager/: CMakeLists.txt  fake_window.h  window_manager_test.cpp
test/desktop/window_placement/: CMakeLists.txt  floating_policy_test.cpp  window_placement_test.cpp
test/ipc/: CMakeLists.txt  ipc_message_test.cpp  ipc_notify_test.cpp  ipc_registry_test.cpp  ipc_service_locator_test.cpp  ipc_transport_test.cpp
test/logger/: CMakeLists.txt  logger_concurrency_test.cpp  logger_formatter_test.cpp  test_config.h
test/logger/benchmark/: logger_benchmark_test.cpp
test/logger/error_handling/: logger_error_handling_test.cpp
test/logger/mock/: counting_sink.h  mock_sink.h
test/notification/: CMakeLists.txt  notification_service_test.cpp
test/scripts/: run_all_tests.sh
test/scripts/lib/: bash_unit_helper.sh
test/system/: CMakeLists.txt  test_cpu_info_query.cpp  test_hardware_tier.cpp
test/tools/test_doxygen_linter/: test_check_function_blocks.py  test_check_language_rules.py  test_constexpr_constructor.py  test_linter.py
test/ui/: CMakeLists.txt
test/ui/base/: CMakeLists.txt  color_helper_test.cpp  color_test.cpp  device_pixel_test.cpp  easing_test.cpp  geometry_helper_test.cpp  math_helper_test.cpp
test/ui/components/: CMakeLists.txt  elevation_controller_test.cpp  focus_ring_test.cpp  painter_layer_test.cpp  ripple_helper_test.cpp  state_machine_test.cpp
test/ui/core/: CMakeLists.txt  token_test.cpp
ui/: CFDesktop.cpp  CFDesktop.h  CFDesktopEntity.cpp  CFDesktopProxy.h  CMakeLists.txt  export.h
ui/base/: CMakeLists.txt  color.h  color_helper.h  device_pixel.h  easing.h  geometry_helper.h  math_helper.cpp  math_helper.h  qt_backend.cpp  qt_backend.h
ui/components/: CMakeLists.txt  IDisplayServerBackend.h  IWindow.h  IWindowBackend.cpp  WindowManager.cpp  WindowManager.h  animation.cpp  animation.h  animation_factory_manager.cpp  animation_factory_manager.h  animation_group.h  app_entry.h  spring_animation.h  timing_animation.cpp  timing_animation.h  window_info.h
ui/core/: CMakeLists.txt  color_scheme.h  font_type.h  motion_spec.h  radius_scale.h  theme.h  theme_factory.h  theme_manager.cpp  theme_manager.h  token.hpp
ui/render/: CMakeLists.txt  render_backend.h  render_backend_factory.h
ui/widget/: CMakeLists.txt
(+2542 files in other folders)
